# turing-smart-screen-rust-js

./: .gitignore  README.md  TODO-lhm-sensors.md  config.yaml  design_rust_js_rewrite.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app-bootstrap.js  app.js  editor.html  index.html  settings-app.js  settings.html  style.css
src-tauri/: Cargo.toml  app.manifest  build.rs  error_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lhm.rs  main.rs  screenshot.rs  startup.rs  templates.rs  tray.rs  window_state.rs
src-tauri/src/display/: diff.rs  mod.rs  protocol_a.rs  protocol_b.rs  protocol_c.rs  protocol_d.rs  protocol_weact.rs  rgb565.rs  serial.rs
src-tauri/src/sensors/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs
src/editor/: canvas.js  editor-app.js  editor-style.css  manifest.js  properties-panel.js  template-compiler.js  widget-registry.js
src/templates/v1/: app.js  style.css  template.html
src/templates/v2/: app.js  style.css  template.html
