[package]
name = "turing-smart-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serialport = "4"
sysinfo = "0.33"
image = "0.25"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Storage_Xps",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
